# FreeRDP

./: CMakeLists.txt  README.md  config.h.in
channels/cliprdr/client/: cliprdr_main.c
channels/drdynvc/client/: drdynvc_main.c
channels/rdpdr/client/: rdpdr_main.c
channels/rdpgfx/client/: rdpgfx_main.c
channels/rdpsnd/client/: rdpsnd_main.c
client/: .gitignore
client/X11/: xf_client.c  xf_event.c  xf_gfx.c  xf_graphics.c
client/X11/cli/: xfreerdp.c
client/common/: cmdline.c  cmdline.h
dump/: show  show.cc
hooks/: PosixThreadHook.c  PosixThreadHookTest  PosixThreadHookTest.c
include/freerdp/: codecs.h  settings.h
include/freerdp/client/: rdpgfx.h
include/freerdp/extension/: RDPGFXAudit.h
libfreerdp/: CMakeLists.txt
libfreerdp/codec/: color.c  h264.c  rfx_decode.c
libfreerdp/core/: channels.c  codecs.c  freerdp.c
libfreerdp/extension/: CMakeLists.txt  RDPGFXAudit.c
libfreerdp/gdi/: gfx.c
libfreerdp/primitives/: prim_YUV_opencl.c  primitives.c  primitives.cl
libfreerdp/utils/: signal.c
scripts/: FileResourceIntegration.sh
winpr/include/winpr/: wlog.h
winpr/libwinpr/: CMakeLists.txt
winpr/libwinpr/extension/: CMakeLists.txt  ConsoleShader.c  ConsoleShader.h
winpr/libwinpr/pool/: pool.c
winpr/libwinpr/thread/: thread.c
winpr/libwinpr/utils/wlog/: ConsoleAppender.c  Layout.c  wlog.c
